# elemento-fastlog

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  python-app.yml
python/: expected.txt
